kubernetes/gluster.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gluster
  labels:
    app: gluster
spec:
  clusterIP: None
  ports:
    # the port that this service should serve on
  - port: 24007
    targetPort: 24007
  selector:
    app: gluster
