kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: portfolio
spec:
  backend:
    serviceName: portfolio
    servicePort: 80
